# wheel_legged_RL_unilab

./: README.md  go.sh
Sim2real/src/clpai_12dof_0905/: CMakeLists.txt  package.xml
Sim2real/src/clpai_12dof_0905/config/: joint_names_clpai_12dof_0905.yaml  robot_control.yaml  urdf.rviz
Sim2real/src/clpai_12dof_0905/dev_config/: config.yaml  dynamic_config.yaml
Sim2real/src/clpai_12dof_0905/devel_config/: config.yaml  dynamic_config.yaml
Sim2real/src/clpai_12dof_0905/devel_config/policy/: policy_from_pt.onnx
Sim2real/src/clpai_12dof_0905/launch/: control.launch  display.launch  display_nogui.launch  gazebo.launch
Sim2real/src/clpai_12dof_0905/mjcf/: cl_pai.xml  pai_12dof.xml
Sim2real/src/clpai_12dof_0905/rviz/: display.rviz
Sim2real/src/clpai_12dof_0905/urdf/: clpai_12dof_0905.urdf
Sim2real/src/quadruped_deploy/: CMakeLists.txt  package.xml
Sim2real/src/quadruped_deploy/config/: htdw_4438.yaml
Sim2real/src/quadruped_deploy/launch/: deploy_htdw_4438.launch  feedback_htdw_4438.launch  set_zero_htdw_4438.launch
Sim2real/src/quadruped_deploy/src/: quadruped_deploy_node.cpp
Sim2real/src/robot_driver/: CMakeLists.txt  README.md  package.xml  setup.py
Sim2real/src/robot_driver/config/: params.yaml
Sim2real/src/robot_driver/examples/: remote_joy_receiver.launch  remote_joy_receiver.py
Sim2real/src/robot_driver/launch/: humanoid_driver.launch
Sim2real/src/robot_driver/scripts/: test_robot_driver.py
Sim2real/src/robot_driver/src/controllers/: __init__.py  humanoid_controller.py
Sim2real/src/sim2real/: CMakeLists.txt  package.xml
Sim2real/src/sim2real/action_config/: cheer.boost  cheer_6.boost  defense_fix.boost  defense_shake.boost  hello.boost  hello_6.boost  niuyao.boost  test.boost  woshou.boost  yatui.boost  yizima.boost  zhiliyaobai.boost
Sim2real/src/sim2real/action_config/pi_plus_22dof_stand_up/: fuwoqishen_zy1216.boost  yangwozhuanfuwo.boost
Sim2real/src/sim2real/action_config/pi_stand_up/: fuwo.boost  yangwo.boost  youcewo.boost  (+1 more)
Sim2real/src/sim2real/config/: dynamic_config.yaml  pi_plus_lowerbody_pd_config.yaml
Sim2real/src/sim2real/include/: common.h  default_controller.h  highlevel_controller.h  jacobian.h  kinematics.h  level_controller.h  lowlevel_controller.h  mixlevel_controller.h  robot_data.h  sim2real.h
Sim2real/src/sim2real/launch/: sim2real.launch
Sim2real/src/sim2real/robot_param/: 12dof_STM32H730_htdw_4438_ctrl_params.yaml  12dof_STM32H730_pi_ctrl_params.yaml  12dof_STM32H730_pi_lubancat_params.yaml  20dof_STM32H730_pi_plus_ctrl_params.yaml  20dof_STM32H730_pi_plus_orin_params.yaml  22dof_STM32H730_pi_plus_ctrl_params.yaml  22dof_no_head_STM32H730_pi_plus_ctrl_params.yaml  23dof_STM32H730_hi_ctrl_params.yaml  23dof_STM32H730_pi_plus_ctrl_1_waist_params.yaml  24dof_STM32H730_pi_plus_ctrl_params.yaml  24dof_no_head_STM32H730_pi_plus_ctrl_params.yaml  25dof_STM32H730_pi_plus_ctrl_3_waist_params.yaml  25dof_STM32H730_pi_plus_ctrl_params.yaml  26dof_STM32H730_pi_plus_ctrl_params.yaml  27dof_STM32H730_pi_plus_ctrl_1_waist_params.yaml  README.md
Sim2real/src/sim2real/src/: common.cpp  default_controller.cpp  highlevel_controller.cpp  imu_rotated.cpp  jacobian.cpp  kinematics.cpp  lowlevel_controller.cpp  main.cpp  mixlevel_controller.cpp  sim2real.cpp  sim2real.cpp.bak.4438
Sim2real/src/sim2real/test/: test_jacobian.cpp  test_rl_controller.cpp
Sim2real/src/sim2real_dev/: CMakeLists.txt  package.xml
Sim2real/src/sim2real_dev/launch/: develop_controller.launch
Sim2real/src/sim2real_dev/src/: develop_controller.cpp  main.cpp
Sim2real/src/sim2real_master/: CMakeLists.txt  joy.yaml  joy_footstep.yaml  package.xml
Sim2real/src/sim2real_master/launch/: gdb_joy_control_hi.launch  gdb_joy_control_pi.launch  gdb_joy_control_pi_plus.launch  joy_control_hi.launch  joy_control_htdw_4438_rknn.launch  joy_control_pi.launch  joy_control_pi_plus.launch  joy_control_pi_plus_lowerbody.launch  joy_control_pi_plus_orin.launch  joy_control_pi_plus_rknn.launch  joy_control_pi_plus_waist.launch  joy_control_pi_plus_waist_orin.launch  joy_control_pi_plus_waist_rknn.launch  joy_teleop.launch
Sim2real/src/sim2real_master/python/: lowlevel_controller_client.py
Sim2real/src/sim2real_master/src/: CubicSplineInterpolator.cpp  custom_controller_interface.cpp  default_controller_interface.cpp  develop_controller_interface.cpp  main.cpp  master_node.cpp.bak.calib  protection_controller_interface.cpp  remote_controller_interface.cpp  teach_controller_interface.cpp  teach_controller_interface_n.cpp  zerocalibration_controller_interface.cpp
Sim2real/src/sim2real_master/way_point/: way_point_backkup_front.boost  way_point_backups_20250221133754.boost  way_point_backups_20250221162930.boost  way_point_backups_20250221184013.boost  way_point_backups_20250225105108.boost  way_point_backups_20250227090232.boost  way_point_backups_20250227150820.boost  way_point_backups_20250228121602.boost  way_point_backups_20250304142135.boost  way_point_backups_20250304151527.boost  way_point_backups_20250304153230.boost  way_point_backups_20250304153556.boost  way_point_backups_20250304154637.boost  way_point_backups_20250304154901.boost  way_point_backups_20250304160026.boost  way_point_backups_20250304160526.boost  way_point_backups_20250304160628.boost  way_point_backups_20250304160835.boost  way_point_backups_20250304161143.boost  way_point_backups_20250304161727.boost  way_point_backups_20250304175519.boost  way_point_backups_20250305112128.boost  way_point_backups_20250305143626.boost  way_point_backups_20250305145332.boost  way_point_backups_20250305145733.boost  way_point_backups_20250305150252.boost  way_point_backups_20250305151514.boost  way_point_backups_20250427182610.boost  way_point_backups_2_good.boost  way_point_backups_right.boost  way_point_falldown_back.boost
Sim2real/src/sim2real_msg/: CMakeLists.txt  package.xml
Sim2real/src/sim2real_msg/action/: lowlevel_controller.action
Sim2real/src/sim2real_msg/msg/: Joy.msg  Orient.msg  PD2RL.msg  RL2PD.msg  RbtTarget.msg  WayPoint.msg
Sim2real/src/sim2real_msg/srv/: Common.srv  ModelOutput.srv
(+501 files in other folders)
