<?xml version="1.0"?>
<package format="2">
  <name>quadruped_deploy</name>
  <version>0.1.0</version>
  <description>四足机器人独立部署节点（仅依赖 livelybot_serial 与 RKNN）</description>
  <maintainer email="dev@example.com">dev</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sim2real_msg</depend>
  <depend>livelybot_serial</depend>
  <depend>livelybot_msg</depend>
</package>
