<?xml version="1.0"?>
<package format="2">
  <name>robot_driver</name>
  <version>1.0.0</version>
  <description>
    Robot Driver package for humanoid robot control using PID controller.
    人形机器人驱动控制包，使用PID控制器控制人形机器人。
  </description>

  <!-- Maintainer contact information -->
  <maintainer email="developer@example.com">Robot Developer</maintainer>

  <!-- License -->
  <license>MIT</license>

  <!-- Author information -->
  <author email="developer@example.com">Robot Developer</author>

  <!-- Build tool dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>joy</exec_depend>

  <!-- Optional dependencies for joystick control -->
  <exec_depend>teleop_twist_joy</exec_depend>

  <!-- Export -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package> 