<?xml version="1.0"?>
<package format="2">
  <name>sim2real</name>
  <version>0.0.0</version>
  <description>the sim2real in pi robot</description>
  <maintainer email="hpx@todo.todo">hpx</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>


  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2</build_depend>


  <depend>serial</depend>
  <depend>livelybot_serial</depend>
  <depend>sim2real_msg</depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>livelybot_logger</build_depend>
  <exec_depend>livelybot_logger</exec_depend>
  <exec_depend>livelybot_description</exec_depend>
  <exec_depend>yesense_imu</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2</exec_depend>

  <!-- <depend>dynamic_reconfigure</depend> -->

</package>
