<?xml version="1.0"?>
<package format="2">
  <name>sim2real_master</name>
  <version>0.0.0</version>
  <description>the master node of sim2real function in hightorque series robots</description>
  <maintainer email="595259789@qq.com">dgz</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <!-- <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>livelybot_serial</depend>
  <depend>sim2real</depend> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>livelybot_serial</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>sim2real</build_depend>
  <build_depend>sim2real_logger</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>livelybot_serial</build_export_depend>
  <build_export_depend>serial</build_export_depend>
  <build_export_depend>sim2real</build_export_depend>
  <build_export_depend>sim2real_logger</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>livelybot_serial</exec_depend>
  <exec_depend>serial</exec_depend>
  <exec_depend>sim2real</exec_depend>
  <exec_depend>sim2real_logger</exec_depend>


</package>
