<?xml version="1.0"?>
<package format="2">
  <name>sim2real_msg</name>
  <version>0.0.0</version>
  <description>The sim2real_msg package</description>
  <maintainer email="hpx@todo.todo">hpx</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_runtime</depend>
  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>actionlib_msgs</depend>
</package>
